<resources>
    <string name="app_name">Blood Donation</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="register">Register\ </string>
    <string name="pipe_Sys">|</string>
    <string name="sign_in">Sign In</string>
    <string name="sing">A single drop of blood can make a huge difference </string>
    <string name="ex_abcd_gma">EX: Abcd@gmail.com</string>
    <string name="email_id">Email ID</string>
    <string name="password">PASSWORD</string>
    <string name="b_d">Blood \nDonation</string>
    <string name="submit">Submit</string>
    <string name="Heading1">Find Donors</string>
    <string name="Heading2">Contact Your Donor</string>
    <string name="Heading3">   \t\tBe a Hero \nBe a Donor</string>
    <string name="Desc1">You can promptly locate the appropriate donor without any delay.</string>
    <string name="Desc2">It\'s unnecessary to rush when connecting your donor to the tap.</string>
    <string name="Desc3">Providing aid to those in need is a commendable act that can earn one a heroic reputation.</string>
    <string name="continue1">Continue</string>
    <string name="todo">todo\n</string>
    <string name="Skip">Skip-></string>
    <string name="successfully_Logged">Successfully Logged In</string>
    <string name="forgot_password">forgot password?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="ops">Opps. It happens to the best of us. Input your Phone Number to fix the issue.</string>
    <string name="phone_number">Phone Number</string>
    <string name="authy_verif">Authentication</string>
    <string name="cop">Copy the verification code in your authy \napplication to verify this account recovery</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="set_pass">Set new password</string>
    <string name="new_pass">Enter your new password below and check the hint while setting it.</string>
    <string name="user_name">USER NAME</string>
    <string name="name">NAME</string>
    <string name="will_to_be_a_donor">Willing to be a donor?</string>
    <string name="declaration">Declaration</string>
    <string name="i_agree_to_the_above_declaration">I Agree to the above Declaration</string>
    <string name="decline">Decline</string>
    <string name="agree">Agree</string>
    <string name="form">WHEREAS the OWNER herein is absolutely entitled to the property, land and building. bearing Door No.979, Old No.501, P.11. Road, Arumbakkam, Chennai 600 106, and the TENANT herein approached the OWNER to let out a portion of the property, the Second-floor of the said premises with 600, Sq.ft., built up area, more  fully described in the schedule hereunder, On monthly rental basis and the OWNER herein has agreed to let out the same, on the terms and conditions, as agreed by the parties hereto for a period of 2 years (two years), and it is by way of renewal, subject to the terms and conditions set out hereunder.
NOW THIS RENTAL AGREEMENT WITNESSETH AS FOLLOWS:
That the property agreed to be let out is the portion of the premises, 2nd floor with 600 Sq.ft., built up area at Door No.979, Old No.501, P.H. Road, Arumbakkam, Chennai-600 106, described in the schedule hereunder.
That the monthly rent payable shall be at RS.12000/- (Rupees Twelve Thousand only) and the charges for the amenities provided shall be at RS.1000/- (Rupees One Thousand only) and the said consolidated sum of RS.13000/-(Rupees Thirteen Thousand only) shall be payable on or before 15th day of every succeeding English Calendar month.
That the TENANT has on 26.06.2022, paid a sum of Rs.1,00,000/- (Rupees One Lakh only) paid in cash
That it is hereby specifically agreed that the Rental Advance Cum Security Deposit shall not carry any interest and the same shall be returnable or adjustable at the time of termination of tenancy or vacating the tenanted premises and handing over vacant possession to the OWNER, whichever is later.

That the TENANT shall not commit any default in payment of monthly rents and further the option shall be with the OWNER to evict/dispossess the TENANT, if they commit default continuously for two months.

OWNER                                                                                                                                                   TENANT
</string>
    <string name="blood_group">Blood Group</string>
    <string name="address1">Address</string>
    <string name="state">State</string>
    <string name="emergency_phone_no">Emergency Phone No</string>
    <string name="city">City or Town</string>
    <string name="phone_no">Phone No</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="hi">Hi,</string>
    <string name="join_us_save_lives_together">Join Us,Save Lives \nTogether</string>
    <string name="donate">DONATE</string>
    <string name="reason">Reason</string>
    <string name="Declaration">  ⁕Age: Donors are usually required to be at least 17 or 18 years old.\n ⁕Weight: Donors often need to weigh a minimum amount, usually around 50 kg.\n ⁕Health: They should not have any acute or chronic illnesses, infections, or diseases that could be transmitted through blood.\n ⁕Medications: Certain medications can affect blood donation eligibility. Donors should inform the donation center about any medications they are taking.\n ⁕Travel: Travel to certain regions, especially those with a risk of malaria or other bloodborne diseases, may affect eligibility. Some countries or regions have specific deferral periods.\n ⁕Recent Donations: There is usually a waiting period between blood donations to allow the body to recover. This can range from a few weeks to a few months, depending on the type of donation (whole blood, platelets, etc.).\n ⁕Piercings and Tattoos: Some donation centers have specific guidelines regarding recent piercings and tattoos, often requiring a waiting period before donating.\n ⁕Pregnancy: Pregnant individuals are usually not eligible to donate blood. There may also be a waiting period after childbirth.\n ⁕Lifestyle Choices: Certain lifestyle factors, such as recent drug use or high-risk sexual behaviour, may affect eligibility.\n ⁕Medical History: Donors are typically asked about their medical history and risk factors. Honest and accurate answers are crucial to ensuring the safety of the blood supply.\n\n\n </string>
    <string name="declaration_nto_become_a_donor">DECLARATION\nTo Become A Donor</string>
    <string name="agree_to_the_conditions">Agree to the conditions</string>
    <string name="units">Units</string>
    <string name="descriptive_reason">Descriptive Reason</string>
    <string name="profile">PROFILE</string>
    <string name="edit"><u>Edit</u></string>
    <string name="name25">Name:</string>
    <string name="blood_group25">Blood Group:</string>
    <string name="e_mail">E-mail:</string>
    <string name="address">Address:</string>
    <string name="about">ABOUT</string>
    <string name="about_our_b"><b>About Our Blood Donation App</b></string>
    <string name="p1">About Our Blood Donation App Welcome to BLOOD DONATION, your trusted partner in saving lives through blood donation. We are passionate about connecting donors with those in need, and we\'re thrilled to share our story with you.</string>
    <string name="h1"><b>Our Mission</b></string>
    <string name="p2">At BLOOD DONATION, our mission is simple yet profound: to bridge the gap between blood donors and patients in need. We believe that every drop of blood donated has the power to make a life-saving difference. Our goal is to make the blood donation process easy, efficient, and accessible to everyone.</string>
    <string name="h2"><b>Our Story</b></string>
    <string name="security">SECURITY</string>
    <string name="sh1"><b>Security and Privacy</b></string>
    <string name="sh2"><b>Data Encryption</b></string>
    <string name="sh3"><b>User Authentication</b></string>
    <string name="sh4"><b>Data Access Control</b></string>
    <string name="sh5"><b>Privacy Setting</b></string>
    <string name="sh6"><b>Data Retention and Deletion</b></string>
    <string name="sh7"><b>Third-Party Services</b></string>
    <string name="sh8"><b>Security Updates</b></string>
    <string name="sh9"><b>Report Security Concerns</b></string>
    <string name="sh10"><b>Your Trust Matters</b></string>
    <string name="sp1">At Blood Donation , we take the security and privacy of your information very seriously. We are committed to ensuring that your data is protected and that your experience with our app is safe and secure. This page outlines the measures we have in place to safeguard your information.</string>
    <string name="sp2">All data transmitted between your device and our servers is encrypted using industry-standard SSL/TLS encryption protocols. This means that your personal information, including login credentials and communication with our servers, is fully protected from eavesdropping.</string>
    <string name="sp3">To access your personal profile and donation history, we employ robust user authentication mechanisms. This includes secure login processes, password encryption, and optional two-factor authentication (2FA) to ensure that only authorized individuals can access your account</string>
    <string name="sp4">Our team follows strict access control procedures. Only authorized personnel with a legitimate need are granted access to user data, and even then, it\'s on a need-to-know basis. We regularly audit and review access logs to prevent unauthorized access.</string>
    <string name="sp5">You have control over your data. Our app provides you with privacy settings that allow you to choose what information you want to share and with whom. You can update these settings at any time through your profile.</string>
    <string name="sp6">We retain your data only for as long as necessary to provide our services or as required by law. You can request the deletion of your account and data at any time, and we will promptly comply with your request.</string>
    <string name="sp7">While we work with third-party services for various app functionalities, we carefully select our partners and ensure they maintain high standards of security and privacy. We encourage you to review the privacy policies of these third-party services when using them through our app.</string>
    <string name="sp8">We regularly update our app to address security vulnerabilities and ensure the latest security patches are applied. We appreciate your cooperation in keeping the app updated to the latest version to benefit from these security enhancements.</string>
    <string name="sp9">If you ever come across a security concern or believe your account has been compromised, please contact our security team immediately at [Security Email/Phone]. We take all reports seriously and will investigate promptly.</string>
    <string name="sp10">Your trust in Blood Donation is our most valuable asset. We are dedicated to maintaining the highest standards of security and privacy in every aspect of our app. If you have any questions or concerns regarding the security of your data, please don\'t hesitate to contact us.</string>
    <string name="sp11">Thank you for being a part of our community and for entrusting us with your information.\n\n\n</string>
</resources>