<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Security_page"
    android:background="@color/grey_black"
    android:theme="@style/page71.Blood_Donation">

    <Button
        android:id="@+id/back5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back_join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/security"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="601dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineHeight="25sp"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh7"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp7"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh8"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp8"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh9"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp9"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sh10"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:text="@string/sp10"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="4sp"
                android:textAlignment="center"
                android:text="@string/sp11"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>