<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/page71.Blood_Donation"
    tools:context=".home_page_Declaration">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="131dp"
        android:layout_height="117dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/logo_blood"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/blood_donat4"
        android:layout_width="189dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:lineHeight="36sp"
        android:text="@string/b_d"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        tools:ignore="TextSizeCheck"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="231dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:lineHeight="54sp"
        android:text="@string/declaration"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="TextSizeCheck"
        tools:targetApi="p" />

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:letterSpacing="0.07"
                android:lineHeight="30sp"
                android:text="@string/Declaration"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/agree_to_the_conditions"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/textView4"
                app:layout_constraintEnd_toEndOf="@id/textView4"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/textView4"
                app:layout_constraintTop_toTopOf="@id/textView4"
                app:layout_constraintVertical_bias="0.998" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textV8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/i_agree_to_the_above_declaration"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/pro"
        android:layout_width="186dp"
        android:layout_height="61dp"
        style="@style/button_attr"
        android:background="@drawable/btn_style"
        android:fontFamily="@font/poppins_extralight"
        android:text="@string/submit"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824"
        app:layout_constraintHorizontal_bias="0.9">

        <RadioButton
            style="@style/radio_attr"
            android:id="@+id/Agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree" />

        <RadioButton
            style="@style/radio_attr"
            android:id="@+id/Decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>